@@ -22,7 +22,7 @@ module Padrino
         #
         def add_project_module(controller)
           permission = "      role.project_module :#{controller}, \"/#{controller}\"\n"
-          inject_into_file destination_root("/admin/app.rb"),  permission, :after => "access_control.roles_for :admin do |role, account|\n"
+          inject_into_file destination_root("/admin/app.rb"),  permission, :after => "access_control.roles_for :admin do |role|\n"
         end
       end # Actions
     end # Admin
